qt_wrap_cpp(
	zdl
	ZDL_MOC_OUTFILES
	${PROJECT_SOURCE_DIR}/include/ZDLAboutDialog.h
	${PROJECT_SOURCE_DIR}/include/ZDLAdvancedMultiplayerDialog.h
	${PROJECT_SOURCE_DIR}/include/ZDLConfigurationEvents.h
	${PROJECT_SOURCE_DIR}/include/ZDLDMFlagCheckbox.h
	${PROJECT_SOURCE_DIR}/include/ZDLDMFlagManager.h
	${PROJECT_SOURCE_DIR}/include/ZDLDMFlagManager.h
	${PROJECT_SOURCE_DIR}/include/ZDLFileListable.h
	${PROJECT_SOURCE_DIR}/include/ZDLFilePane.h
	${PROJECT_SOURCE_DIR}/include/ZDLIWadList.h
	${PROJECT_SOURCE_DIR}/include/ZDLInfoBar.h
	${PROJECT_SOURCE_DIR}/include/ZDLInterface.h
	${PROJECT_SOURCE_DIR}/include/ZDLListWidget.h
	${PROJECT_SOURCE_DIR}/include/ZDLListable.h
	${PROJECT_SOURCE_DIR}/include/ZDLMainWindow.h
	${PROJECT_SOURCE_DIR}/include/ZDLMultiPane.h
	${PROJECT_SOURCE_DIR}/include/ZDLNameInput.h
	${PROJECT_SOURCE_DIR}/include/ZDLNameListable.h
	${PROJECT_SOURCE_DIR}/include/ZDLQSplitter.h
	${PROJECT_SOURCE_DIR}/include/ZDLSettingsPane.h
	${PROJECT_SOURCE_DIR}/include/ZDLSettingsTab.h
	${PROJECT_SOURCE_DIR}/include/ZDLSourcePortList.h
	${PROJECT_SOURCE_DIR}/include/ZDLWidget.h
	${PROJECT_SOURCE_DIR}/include/ZDMFlagPicker.h
)

add_executable(
	zdl
	ZDLAboutDialog.cpp
	ZDLAdvancedMultiplayerDialog.cpp
	ZDLConfiguration.cpp
	ZDLConfigurationEvents.cpp
	ZDLConfigurationManager.cpp
	ZDLDMFlagCheckbox.cpp
	ZDLDMFlagManager.cpp
	ZDLFileList.cpp
	ZDLFileListable.cpp
	ZDLFilePane.cpp
	ZDLIWadList.cpp
	ZDLInfoBar.cpp
	ZDLInterface.cpp
	ZDLListWidget.cpp
	ZDLListable.cpp
	ZDLMainWindow.cpp
	ZDLMapFile.cpp
	ZDLMultiPane.cpp
	ZDLNameInput.cpp
	ZDLNameListable.cpp
	ZDLQSplitter.cpp
	ZDLSettingsPane.cpp
	ZDLSettingsTab.cpp
	ZDLSourcePortList.cpp
	ZDLWidget.cpp
	ZDMFlagPicker.cpp
	extras.cpp
	libwad.cpp
	qzdl.cpp
	zdlconf.cpp
	zdlline.cpp
	zdlsection.cpp
	${ZDL_MOC_OUTFILES}
)

target_include_directories(zdl PRIVATE ${PROJECT_SOURCE_DIR}/include)
target_link_libraries(zdl Qt5::Core Qt5::Widgets)
target_compile_definitions(zdl PRIVATE FALSE=0 TRUE=1)
